--- a/LazeRunner.html
+++ b/LazeRunner.html
@@ -29,7 +29,7 @@
       position: absolute;
       bottom: 10px;
       left: 10px;
-      font-size: 14px;
+      font-size: 18px; /* Tamanho aumentado */
       color: #aaa;
     }
     #version {
@@ -115,10 +115,12 @@
     document.addEventListener('keydown', (e) => {
       if (e.key in keys) {
         keys[e.key] = true;
+
         if (e.key === ' ' && !player.immune && Date.now() - player.lastImmuneEnd >= player.immuneCooldown) {
           player.immune = true;
           player.immuneTime = Date.now();
         }
+
         if (e.key === 'Enter' && gameOver) {
           const name = prompt('Digite seu nome para salvar sua pontuação:');
           if (name) {
@@ -126,22 +128,118 @@
             saveRanking();
             updateRanking();
           }
-          player.x = canvas.width / 2;
-          player.y = canvas.height / 2;
-          player.immune = false;
-          bars = [];
+          resetGame();
+        }
+      }
+    });
 
+    document.addEventListener('keyup', (e) => {
+      if (e.key in keys) {
+        keys[e.key] = false;
+      }
+    });
+
+    function resetGame() {
+      player.x = canvas.width / 2;
+      player.y = canvas.height / 2;
+      player.immune = false;
+      score = 0;
+      bars = [];
+      gameOver = false;
+      lastTime = 0;
+      requestAnimationFrame(gameLoop);
+    }
+
+    function createBar() {
+      const direction = Math.floor(Math.random() * 4);
+      const thickness = 20;
+      const length = Math.random() * 300 + 100;
+      const speed = 2 + Math.random() * 2;
+
+      let bar = {};
+
+      switch (direction) {
+        case 0: // left to right
+          bar = { x: -length, y: Math.random() * canvas.height, width: length, height: thickness, dx: speed, dy: 0 };
+          break;
+        case 1: // right to left
+          bar = { x: canvas.width, y: Math.random() * canvas.height, width: length, height: thickness, dx: -speed, dy: 0 };
+          break;
+        case 2: // top to bottom
+          bar = { x: Math.random() * canvas.width, y: -length, width: thickness, height: length, dx: 0, dy: speed };
+          break;
+        case 3: // bottom to top
+          bar = { x: Math.random() * canvas.width, y: canvas.height, width: thickness, height: length, dx: 0, dy: -speed };
+          break;
+      }
+
+      bars.push(bar);
+    }
+
+    function movePlayer(dt) {
+      let dx = 0;
+      let dy = 0;
+
+      if (keys.ArrowUp || keys.w || keys.W) dy -= 1;
+      if (keys.ArrowDown || keys.s || keys.S) dy += 1;
+      if (keys.ArrowLeft || keys.a || keys.A) dx -= 1;
+      if (keys.ArrowRight || keys.d || keys.D) dx += 1;
+
+      if (dx !== 0 || dy !== 0) {
+        const len = Math.hypot(dx, dy);
+        dx = (dx / len) * player.speed;
+        dy = (dy / len) * player.speed;
+
+        player.x += dx;
+        player.y += dy;
+
+        player.x = Math.max(boundary.x + player.radius, Math.min(player.x, boundary.x + boundary.width - player.radius));
+        player.y = Math.max(boundary.y + player.radius, Math.min(player.y, boundary.y + boundary.height - player.radius));
+      }
+    }
+
+    function moveBars(dt) {
+      bars.forEach(bar => {
+        bar.x += bar.dx * dt;
+        bar.y += bar.dy * dt;
+      });
+    }
+
+    function checkCollisions() {
+      for (let bar of bars) {
+        if (
+          player.x + player.radius > bar.x &&
+          player.x - player.radius < bar.x + bar.width &&
+          player.y + player.radius > bar.y &&
+          player.y - player.radius < bar.y + bar.height
+        ) {
+          if (!player.immune) {
+            gameOver = true;
+          }
+        }
+      }
+    }
+
+    function manageImmunity() {
+      if (player.immune && Date.now() - player.immuneTime > player.immuneDuration) {
+        player.immune = false;
+        player.lastImmuneEnd = Date.now();
+      }
+    }
+
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      // Área de jogo
+      ctx.strokeStyle = 'white';
+      ctx.lineWidth = 2;
+      ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
+
+      // Jogador
       ctx.beginPath();
       ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
-
-      const now = Date.now();
-      const inCooldown = now - player.lastImmuneEnd < player.immuneCooldown;
-      const cooldownRemaining = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
-      const immunityRemaining = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
-
-      ctx.fillStyle = player.immune ? 'yellow' : (inCooldown ? '#444' : 'white');
+      ctx.fillStyle = player.immune ? 'yellow' : 'white';
       ctx.fill();
-
       if (player.immune) {
         ctx.beginPath();
         ctx.arc(player.x, player.y, player.radius + 10, 0, Math.PI * 2);
@@ -150,8 +248,17 @@
         ctx.stroke();
       }
 
+      // Barras
       ctx.fillStyle = 'red';
-      bars.forEach(bar => ctx.fillRect(bar.x, bar.y, bar.width, bar.height));
+      bars.forEach(bar => {
+        ctx.fillRect(bar.x, bar.y, bar.width, bar.height);
+      });
+
+      // HUD
+      const now = Date.now();
+      const inCooldown = now - player.lastImmuneEnd < player.immuneCooldown;
+      const cooldownRemaining = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
+      const immunityRemaining = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
 
       ctx.fillStyle = 'white';
       ctx.font = '24px Arial';
@@ -174,8 +281,12 @@
 
     let lastTime = 0;
     let lastFrame = 0;
+
     function gameLoop(timestamp) {
-      if (gameOver) return;
+      if (gameOver) {
+        draw();
+        return;
+      }
 
       const dt = (timestamp - lastFrame) / 16.67;
       lastFrame = timestamp;
@@ -189,6 +300,7 @@
         if (score >= 10) createBar();
         if (score >= 20) createBar();
         lastTime = timestamp;
+        score++;
       }
 
       movePlayer(dt);
@@ -196,6 +308,7 @@
       manageImmunity();
       checkCollisions();
       draw();
+
       requestAnimationFrame(gameLoop);
     }
 
