--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- BLOCO CENTRO -->
 
     <div id="Centro">
-        <a href="Jogo.html" id="imgmascara"><img src="imagens/Mascara_GsWolf101.png" alt="Imagem mascara"></a>
+        <a href="Lazerunner/LazeRunner.html" id="imgmascara"><img src="imagens/Mascara_GsWolf101.png" alt="Imagem mascara"></a>
         <h2>Redes sociais</h2>
         <figure id="redes_sociais">
             <a href="https://www.instagram.com/gswolf101/" target="_blank" rel="noopener"> <img src="imagens/Logoinstagram.png" alt="Instagram"></a>
