--- a/Lazerunner/LazeRunner.html
+++ b/Lazerunner/LazeRunner.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>LazerRunner</title>
+  <title>Jogo de Esquiva</title>
   <style>
     body {
       display: flex;
@@ -29,7 +29,7 @@
       position: absolute;
       bottom: 10px;
       left: 10px;
-      font-size: 24px; /* Tamanho aumentado para instruções */
+      font-size: 14px;
       color: #aaa;
     }
     #version {
@@ -39,37 +39,6 @@
       font-size: 14px;
       color: #aaa;
     }
-    #startScreen, #gameOverScreen {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-size: 48px;
-      text-align: center;
-    }
-    #startScreen button, #gameOverScreen button {
-      margin: 20px;
-      padding: 10px 20px;
-      font-size: 24px;
-      cursor: pointer;
-      background-color: #fff;
-      color: #000;
-      border: none;
-      border-radius: 5px;
-    }
-    #startScreen button:hover, #gameOverScreen button:hover {
-      background-color: #ccc;
-    }
-    #startScreen.hidden, #gameOverScreen.hidden {
-      display: none;
-    }
   </style>
 </head>
 <body>
@@ -77,17 +46,6 @@
   <div id="ranking">
     <h2>Ranking</h2>
     <ol id="rankingList"></ol>
-  </div>
-
-  <div id="startScreen">
-    <h1>LazerRunner</h1>
-    <button id="playButton">Play</button>
-  </div>
-  <div id="gameOverScreen" class="hidden">
-    <h1>Game Over</h1>
-    <p id="finalScore"></p>
-    <button id="restartButton">Restart</button>
-    <button id="saveRankingButton">Salvar no Ranking</button>
   </div>
 
   <div id="footer">
@@ -100,14 +58,6 @@
   <script>
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
-    const startScreen = document.getElementById('startScreen');
-    const gameOverScreen = document.getElementById('gameOverScreen');
-    const playButton = document.getElementById('playButton');
-    const restartButton = document.getElementById('restartButton');
-    const saveRankingButton = document.getElementById('saveRankingButton');
-    const finalScoreText = document.getElementById('finalScore');
-
-    let gameStarted = false;
 
     const boundary = {
       x: 50,
@@ -165,148 +115,37 @@
     document.addEventListener('keydown', (e) => {
       if (e.key in keys) {
         keys[e.key] = true;
-
         if (e.key === ' ' && !player.immune && Date.now() - player.lastImmuneEnd >= player.immuneCooldown) {
           player.immune = true;
           player.immuneTime = Date.now();
         }
-
         if (e.key === 'Enter' && gameOver) {
-          resetGame();
-        }
-      }
-    });
-
-    document.addEventListener('keyup', (e) => {
-      if (e.key in keys) {
-        keys[e.key] = false;
-      }
-    });
-
-    playButton.addEventListener('click', () => {
-      startScreen.classList.add('hidden');
-      gameStarted = true;
-      resetGame();
-    });
-
-    restartButton.addEventListener('click', () => {
-      gameOverScreen.classList.add('hidden');
-      resetGame();
-    });
-
-    saveRankingButton.addEventListener('click', () => {
-      const name = prompt('Digite seu nome para salvar sua pontuação:');
-      if (name) {
-        rankings.push({ name, score });
-        saveRanking();
-        updateRanking();
-      }
-    });
-
-    function resetGame() {
-      player.x = canvas.width / 2;
-      player.y = canvas.height / 2;
-      player.immune = false;
-      score = 0;
-      bars = [];
-      gameOver = false;
-      lastTime = 0;
-      gameOverScreen.classList.add('hidden');
-      requestAnimationFrame(gameLoop);
-    }
-
-    function createBar() {
-      const direction = Math.floor(Math.random() * 4);
-      const thickness = 20;
-      const length = Math.random() * 300 + 100;
-      const speed = 2 + Math.random() * 2;
-
-      let bar = {};
-
-      switch (direction) {
-        case 0: // left to right
-          bar = { x: -length, y: Math.random() * canvas.height, width: length, height: thickness, dx: speed, dy: 0 };
-          break;
-        case 1: // right to left
-          bar = { x: canvas.width, y: Math.random() * canvas.height, width: length, height: thickness, dx: -speed, dy: 0 };
-          break;
-        case 2: // top to bottom
-          bar = { x: Math.random() * canvas.width, y: -length, width: thickness, height: length, dx: 0, dy: speed };
-          break;
-        case 3: // bottom to top
-          bar = { x: Math.random() * canvas.width, y: canvas.height, width: thickness, height: length, dx: 0, dy: -speed };
-          break;
-      }
-
-      bars.push(bar);
-    }
-
-    function movePlayer(dt) {
-      let dx = 0;
-      let dy = 0;
-
-      if (keys.ArrowUp || keys.w || keys.W) dy -= 1;
-      if (keys.ArrowDown || keys.s || keys.S) dy += 1;
-      if (keys.ArrowLeft || keys.a || keys.A) dx -= 1;
-      if (keys.ArrowRight || keys.d || keys.D) dx += 1;
-
-      if (dx !== 0 || dy !== 0) {
-        const len = Math.hypot(dx, dy);
-        dx = (dx / len) * player.speed;
-        dy = (dy / len) * player.speed;
-
-        player.x += dx;
-        player.y += dy;
-
-        player.x = Math.max(boundary.x + player.radius, Math.min(player.x, boundary.x + boundary.width - player.radius));
-        player.y = Math.max(boundary.y + player.radius, Math.min(player.y, boundary.y + boundary.height - player.radius));
-      }
-    }
-
-    function moveBars(dt) {
-      bars.forEach(bar => {
-        bar.x += bar.dx * dt;
-        bar.y += bar.dy * dt;
-      });
-    }
-
-    function checkCollisions() {
-      for (let bar of bars) {
-        if (
-          player.x + player.radius > bar.x &&
-          player.x - player.radius < bar.x + bar.width &&
-          player.y + player.radius > bar.y &&
-          player.y - player.radius < bar.y + bar.height
-        ) {
-          if (!player.immune) {
-            gameOver = true;
+          const name = prompt('Digite seu nome para salvar sua pontuação:');
+          if (name) {
+            rankings.push({ name, score });
+            saveRanking();
+            updateRanking();
           }
-        }
-      }
-    }
+          player.x = canvas.width / 2;
+          player.y = canvas.height / 2;
+          player.immune = false;
+          bars = [];
+          score = 0;
+          gameOver = false;
+          lastTime = 0;
+          lastFrame = 0;
 
-    function manageImmunity() {
-      if (player.immune && Date.now() - player.immuneTime > player.immuneDuration) {
-        player.immune = false;
-        player.lastImmuneEnd = Date.now();
-      }
-    }
-
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      if (!gameStarted) return;
-
-      // Área de jogo
-      ctx.strokeStyle = 'white';
-      ctx.lineWidth = 2;
-      ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
-
-      // Jogador
       ctx.beginPath();
       ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
-      ctx.fillStyle = player.immune ? 'yellow' : 'white';
+
+      const now = Date.now();
+      const inCooldown = now - player.lastImmuneEnd < player.immuneCooldown;
+      const cooldownRemaining = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
+      const immunityRemaining = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
+
+      ctx.fillStyle = player.immune ? 'yellow' : (inCooldown ? '#444' : 'white');
       ctx.fill();
+
       if (player.immune) {
         ctx.beginPath();
         ctx.arc(player.x, player.y, player.radius + 10, 0, Math.PI * 2);
@@ -315,17 +154,8 @@
         ctx.stroke();
       }
 
-      // Barras
       ctx.fillStyle = 'red';
-      bars.forEach(bar => {
-        ctx.fillRect(bar.x, bar.y, bar.width, bar.height);
-      });
-
-      // HUD
-      const now = Date.now();
-      const inCooldown = now - player.lastImmuneEnd < player.immuneCooldown;
-      const cooldownRemaining = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
-      const immunityRemaining = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
+      bars.forEach(bar => ctx.fillRect(bar.x, bar.y, bar.width, bar.height));
 
       ctx.fillStyle = 'white';
       ctx.font = '24px Arial';
@@ -337,19 +167,19 @@
       ctx.fillText(`Recarga: ${(cooldownRemaining / 1000).toFixed(1)}s`, 340, 28);
 
       if (gameOver) {
-        finalScoreText.textContent = `Pontuação Final: ${score}`;
-        gameOverScreen.classList.remove('hidden');
+        ctx.fillStyle = 'white';
+        ctx.font = '48px Arial';
+        ctx.fillText('Game Over', canvas.width / 2 - 130, canvas.height / 2);
+        ctx.font = '24px Arial';
+        ctx.fillText(`Pontuação Final: ${score}`, canvas.width / 2 - 100, canvas.height / 2 + 40);
+        ctx.fillText('Pressione Enter para reiniciar', canvas.width / 2 - 150, canvas.height / 2 + 80);
       }
     }
 
     let lastTime = 0;
     let lastFrame = 0;
-
     function gameLoop(timestamp) {
-      if (!gameStarted || gameOver) {
-        draw();
-        return;
-      }
+      if (gameOver) return;
 
       const dt = (timestamp - lastFrame) / 16.67;
       lastFrame = timestamp;
@@ -363,7 +193,6 @@
         if (score >= 10) createBar();
         if (score >= 20) createBar();
         lastTime = timestamp;
-        score++;
       }
 
       movePlayer(dt);
@@ -371,7 +200,6 @@
       manageImmunity();
       checkCollisions();
       draw();
-
       requestAnimationFrame(gameLoop);
     }
 
