--- a/Lazerunner/LazeRunner.html
+++ b/Lazerunner/LazeRunner.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Jogo de Esquiva</title>
+  <title>Lazer Runner</title>
   <style>
     body {
       display: flex;
